--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "lerna-share-1",
+  "name": "@sdf/lerna-share-1",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.ts",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
